--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydbtest\
   &useSSL=false\
   &requireSSL=false\
   &useLegacyDatetimeCode=false\
-  &amp&serverTimezone=UTC
+  &amp&serverTimezone=UTC\
+  &allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 # Hibernate properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # ????? ???????? HTTP ?????? PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
